--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kids-books",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://attom2.github.io/reptile/SummaryView/",
   "dependencies": {
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^7.2.1",
@@ -10,7 +11,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.2"
+    "@testing-library/jest-dom": "^5.11.2",
+    "gh-pages": "^3.1.0"
   }
 }
