--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kids-books",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://attom2.github.io/reptiles-everywhere",
   "dependencies": {
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^7.2.1",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
